# Evaluator

./: pyproject.toml
.github/workflows/: oss-pr-checks.yml
docker/: Dockerfile.base
harbor_datasets/task_overlays/: README.md
harbor_datasets/task_overlays/swebench-verified@1.0/psf__requests-1724/: task.toml
harbor_datasets/task_overlays/swebench-verified@1.0/psf__requests-1724/environment/: Dockerfile
harbor_datasets/task_overlays/swebench-verified@1.0/psf__requests-1766/environment/: Dockerfile
harbor_datasets/task_overlays/swebench-verified@1.0/psf__requests-1921/environment/: Dockerfile  pre-verify.sh
harbor_datasets/task_overlays/swebench-verified@1.0/psf__requests-2317/environment/: Dockerfile
src/nemo_evaluator/: paths.py
src/nemo_evaluator/environments/: harbor.py  registry.py
src/nemo_evaluator/solvers/: harbor.py
tests/test_environments/: test_harbor_task_overlay.py  test_harbor_verifier_setup.py
tests/test_solvers/: test_harbor_terminus_patches.py
